Feat: Add API definition DELETE:"/v1/user_groups/:user_group_name"
